// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component matches snapshot (default props) 1`] = `
<Fragment>
  <ForwardRef
    className="alignChild--center--center"
    style={
      Object {
        "opacity": AnimatedValue {
          "animatedStyles": Set {},
          "children": Array [],
          "done": false,
          "lastPosition": 0,
          "lastTime": undefined,
          "lastVelocity": undefined,
          "payload": undefined,
          "setValue": [Function],
          "startPosition": 0,
          "startTime": 1587790612202,
          "value": 0,
        },
      }
    }
  >
    <ForwardRef
      class="dialog elevation--2"
      role="dialog"
      style={
        Object {
          "maxHeight": "80vh",
          "maxWidth": "500px ",
        }
      }
    >
      <Core />
    </ForwardRef>
  </ForwardRef>
</Fragment>
`;

exports[`Dialog component matches snapshot (set all props) 1`] = `
<Fragment>
  <ForwardRef
    className="alignChild--center--center"
    style={
      Object {
        "opacity": AnimatedValue {
          "animatedStyles": Set {},
          "children": Array [],
          "done": false,
          "lastPosition": 0,
          "lastTime": undefined,
          "lastVelocity": undefined,
          "payload": undefined,
          "setValue": [Function],
          "startPosition": 0,
          "startTime": 1587790612206,
          "value": 0,
        },
      }
    }
  >
    <ForwardRef
      class="dialog elevation--2"
      role="alertdialog"
      style={
        Object {
          "maxHeight": "1000px",
          "maxWidth": "1000px ",
        }
      }
    >
      <Core />
    </ForwardRef>
  </ForwardRef>
</Fragment>
`;
